tests/invalid/depth04.h
#include "depth05.h"
